[38-create-event-controlle-in-event-service] feat: adding pageable to EventService, EventRepository and EventController